feat: add footer

--- a/index.html
+++ b/index.html
@@ -2,77 +2,104 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Мастерская "Компьютерный доктор"</title>
+    <title>"Компьютерный доктор" мастерская</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="icon" href="favicon.png">
 </head>
 <body>
 <div class="wrapper">
     <div class="side-bar">
         <div class="logo"></div>
+
         <div class="social">
             <ul>
-                <li><a href="#" class="facebook"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100038310137553" class="facebook" target="_blank"> </a></li>
                 <li><a href="#" class="google"></a></li>
-                <li><a href="#" class="tweeter"></a></li>
+                <li><a href="https://twitter.com/comp_doct" class="tweeter" target="_blank"></a></li>
                 <li><a href="#" class="vk"></a></li>
                 <li><a href="#" class="instagram"></a></li>
             </ul>
         </div>
-        <div>
-            <ul class="nav">
-                <li class="side-bar-item"><a href="./index.html"><span> Главная </span></a></li>
-                <li class="side-bar-item"><a href="#"><span> О нас </span></a></li>
-                <li class="side-bar-item"><a href="#"><span> Услуги </span></a></li>
-                <li class="side-bar-item"><a href="#"><span> Заказать </span></a></li>
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="./index.html"><span> Главная </span></a></li>
+                <li class="nav-item"><a href="#"><span> О нас </span></a></li>
+                <li class="nav-item"><a href="#"><span> Услуги </span></a></li>
+                <li class="nav-item"><a href="#"><span> Заказать </span></a></li>
             </ul>
         </div>
 
     </div>
-
-    <main class="main">
-        <h3> БЫСТРО! КАЧЕСТВЕННО! ПО ДОСТУПНОЙ ЦЕНЕ!!</h3>
-        <p> Поможем Вам и Вашему компьютеру, ноутбуку, планшету и телефону.</p>
-        <h2> Услуги:</h2>
-        <ul>
-            <li>Ремонт и модернизация любой сложности.</li>
-            <li>Переустановка Windows, установка ПО, антивируса</li>
-            <li>Перепрошивка</li>
-            <li>Восстановление информации с ЖД/флешки</li>
-            <li>Замена матрицы</li>
-            <li>Установка навигатора</li>
-            <li>Чистка от пыли и замена термопасты</li>
-            <li>Заправка картриджа (с выездом)</li>
-        </ul>
-        <h2> Также возможны:</h2>
-        <ol>
-            <li> Удаленная помощь в найстройке ПК.</li>
-            <li> Вызов курьера или мастера на дом.</li>
-        </ol>
-        <h2> При сумме оплаты от 100 рублей услуги курьера БЕСПЛАТНО!</h2>
-        <h2> Работаем в выходные!</h2>
-        <h2> Режим работы:</h2>
-        <p> Понедельник-пятница : 8.00 – 21.00,</p>
-        <p> Суббота-воскресенье: 10.00-18.00.</p>
-        <p> ООО "Компьютерный помощник"</p>
-        <p> т. 8 (029) 113-56-77</p>
-        <p> г.Минск. Проспект Машерова, 134, офис 32</p>
-        <p>Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
-            Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm</p>
-    </main>
+    <div class="central">
+        <main class="main">
+            <h3> БЫСТРО! КАЧЕСТВЕННО! ПО ДОСТУПНОЙ ЦЕНЕ!!</h3>
+            <p> Поможем Вам и Вашему компьютеру, ноутбуку, планшету и телефону.</p>
+            <h2> Услуги:</h2>
+            <ul>
+                <li>Ремонт и модернизация любой сложности.</li>
+                <li>Переустановка Windows, установка ПО, антивируса</li>
+                <li>Перепрошивка</li>
+                <li>Восстановление информации с ЖД/флешки</li>
+                <li>Замена матрицы</li>
+                <li>Установка навигатора</li>
+                <li>Чистка от пыли и замена термопасты</li>
+                <li>Заправка картриджа (с выездом)</li>
+            </ul>
+            <h2> Также возможны:</h2>
+            <ol>
+                <li> Удаленная помощь в найстройке ПК.</li>
+                <li> Вызов курьера или мастера на дом.</li>
+            </ol>
+            <h2> При сумме оплаты от 100 рублей услуги курьера БЕСПЛАТНО!</h2>
+            <h2> Работаем в выходные!</h2>
+            <h2> Режим работы:</h2>
+            <p> Понедельник-пятница : 8.00 – 21.00,</p>
+            <p> Суббота-воскресенье: 10.00-18.00.</p>
+            <p> ООО "Компьютерный помощник"</p>
+            <p> т. 8 (029) 113-56-77</p>
+            <p> г.Минск. Проспект Машерова, 134, офис 32</p>
+            <p>Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm
+                Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm Vyjuj negjuj ntrcnf pltcm</p>
+        </main>
+        <footer class="footer">
+            <div class="contacts">
+                <p>
+                    <a href="tel:+375291135677" title="Позвоните">
+                        <img src="./assets/images/icons/icons8-phone-filled-50.png" alt="tel" height="13px">
+                    </a>
+                    <span>8(029)113-56-77</span>
+                </p>
+                <p><a href="mailto:computer_doctor@tutanota.com" title="Отправьте письмо">
+                    <img src="./assets/images/icons/icons8-envelope-filled-50.png" alt="email" height="13px">
+                </a>
+                    <span>computer_doctor@tutanota.com</span>
+                </p>
+                <p>
+                    <a href="https://goo.gl/maps/NqF6KK5yPjTX7cQE8" title="Приезжайте" target="_blank">
+                        <img src="./assets/images/icons/icons8-marker-filled-50-2.png" alt="address" height="13px">
+                    </a>
+                    <span>г.Минск. Проспект Машерова, 134, офис 32</span>
+                </p>
+            </div>
+            <div class="copy">
+                <p>&copy; 2019 ИП Куваев А.В. All Rights Reserved.</p>
+            </div>
+        </footer>
+    </div>
 </div>
 </body>
 </html>
