style: change hover stile for nav and footer contacts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
         <div class="social">
             <ul>
-                <li><a href="https://www.facebook.com/profile.php?id=100038310137553" class="facebook" target="_blank"> </a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100038310137553" class="facebook"
+                       target="_blank"> </a></li>
                 <li><a href="#" class="google"></a></li>
                 <li><a href="https://twitter.com/comp_doct" class="tweeter" target="_blank"></a></li>
                 <li><a href="#" class="vk"></a></li>
@@ -77,23 +78,19 @@
         </main>
         <footer class="footer">
             <div class="contacts">
-                <p>
-                    <a href="tel:+375291135677" title="Позвоните">
-                        <img src="./assets/images/icons/icons8-phone-filled-50.png" alt="tel" height="13px">
-                    </a>
+                <div class="contacts-items">
+                    <a href="tel:+375291135677" title="Позвоните" class="tel"></a>
                     <span>8(029)113-56-77</span>
-                </p>
-                <p><a href="mailto:computer_doctor@tutanota.com" title="Отправьте письмо">
-                    <img src="./assets/images/icons/icons8-envelope-filled-50.png" alt="email" height="13px">
-                </a>
+                </div>
+                <div class="contacts-items">
+                    <a href="mailto:computer_doctor@tutanota.com" title="Отправьте письмо" class="e-mail"></a>
                     <span>computer_doctor@tutanota.com</span>
-                </p>
-                <p>
-                    <a href="https://goo.gl/maps/NqF6KK5yPjTX7cQE8" title="Приезжайте" target="_blank">
-                        <img src="./assets/images/icons/icons8-marker-filled-50-2.png" alt="address" height="13px">
-                    </a>
+                </div>
+                <div class="contacts-items">
+                    <a href="https://goo.gl/maps/NqF6KK5yPjTX7cQE8" title="Приезжайте" target="_blank"
+                       class="address"></a>
                     <span>г.Минск. Проспект Машерова, 134, офис 32</span>
-                </p>
+                </div>
             </div>
             <div class="copy">
                 <p>&copy; 2019 ИП Куваев А.В. All Rights Reserved.</p>
