feat: add content and style for page About

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>О нас</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style-about.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="icon" href="../favicon.png">
@@ -36,39 +37,55 @@
 
     <div class="central">
         <main class="main main-about">
+<div class="info">
+    <p><span>"Компьютерный доктор" </span>- это мастерская по ремонту компьютерной техники,<br>
+        расположенная в самом Центре Минска. </p>
+    <p>Мы успешно оказываем свои  услуги уже <span>более 7 лет</span>.</p>
+    <p>Мы благодарны нашим клинетам за то, что они доверяют нам свое время и свою технику.</p>
+    <p>Работники нашей мастерской - это первоклассные мастера, <br>каждый день "спасающие" жизнь вашим любимым девайсам.</p>
+</div>
 
-            <h2> Работаем в выходные!</h2>
-            <h2> Режим работы:</h2>
-            <p> Понедельник-пятница : 8.00 – 21.00,</p>
-            <p> Суббота-воскресенье: 10.00-18.00.</p>
+            <div class="workers">
+                <div class="workers-first-row">
+                <figure>
+                    <img src="../assets/images/about/andrey2.png" alt="Директор"/>
+                    <figcaption> Андрей Куваев<p> (Директор)</p>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="../assets/images/about/rosolko.png" alt="Росолько"/>
+                    <figcaption> Леонид Росолько<p> (ПК и ноутбуки)</p></figcaption>
+                </figure>
+                <figure>
+                    <img src="../assets/images/about/lukashin.png" alt="Лукашин"/>
+                    <figcaption> Георгий Лукашин<p> (ПК и ноутбуки)</p></figcaption>
+                </figure>
+                </div>
+                <div class="workers-second-row">
+                <figure>
+                    <img src="../assets/images/about/ahmetov.png" alt="Ахметов"/>
+                    <figcaption> Амир Ахметов <p> (Apple)</p></figcaption>
+                </figure>
+                <figure>
+                    <img src="../assets/images/about/larin.png" alt="Ларин"/>
+                    <figcaption> Евгений Ларин<p> (Apple)</p></figcaption>
+                </figure>
+                <figure>
+                    <img src="../assets/images/about/boruhin.png" alt="Борухиин"/>
+                    <figcaption> Артур Борухин<p> (Модернизация)</p></figcaption>
+                </figure>
+                </div>
+            </div>
 
-            <div style="padding-bottom: 90px; padding-top: 30px">
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-                <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur.</p>
-                <p> Excepteur sint occaecat cupidatat non proident,</p>
-                </p>sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <div class="schedule">
+                <img src="../assets/images/about/shedule.png" alt="Режим работы">
+                <div>
+                    <p> Работаем в выходные!</p>
+                    <p> Пн-Пт: 8<span>00</span> – 21<span>00</span></p>
+                    <p> Сб-Вс: 10<span>00</span> – 18<span>00</span></p>
+                </div>
             </div>
-            <div style="padding-bottom: 20px">
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-                <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur.</p>
-                <p> Excepteur sint occaecat cupidatat non proident,</p>
-                </p>sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
-            <div style="padding-bottom: 20px">
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-                <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur.</p>
-                <p> Excepteur sint occaecat cupidatat non proident,</p>
-                </p>sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
+
         </main>
         <footer class="footer">
             <div class="contacts">
