feat: add feedback quotes

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,55 +37,111 @@
 
     <div class="central">
         <main class="main main-about">
-<div class="info">
-    <p><span>"Компьютерный доктор" </span>- это мастерская по ремонту компьютерной техники,<br>
-        расположенная в самом Центре Минска. </p>
-    <p>Мы успешно оказываем свои  услуги уже <span>более 7 лет</span>.</p>
-    <p>Мы благодарны нашим клинетам за то, что они доверяют нам свое время и свою технику.</p>
-    <p>Работники нашей мастерской - это первоклассные мастера, <br>каждый день "спасающие" жизнь вашим любимым девайсам.</p>
-</div>
+            <div class="info">
+                <p><span>"Компьютерный доктор" </span> - <br>это мастерская по ремонту компьютерной техники,<br>
+                    расположенная в самом центре <u>Минска.</u></p>
+                <p>Мы успешно оказываем свои услуги уже <span>более 7 лет</span>.</p>
+                <p>Мы благодарны нашим клиентам за то, что они доверяют нам свое время и свою технику.</p>
+                <p>Работники нашей мастерской - это первоклассные мастера,
+                    <br>каждый день "спасающие" жизнь Вашим любимым девайсам.</p>
+            </div>
 
             <div class="workers">
                 <div class="workers-first-row">
-                <figure>
-                    <img src="../assets/images/about/andrey2.png" alt="Директор"/>
-                    <figcaption> Андрей Куваев<p> (Директор)</p>
-                    </figcaption>
-                </figure>
-                <figure>
-                    <img src="../assets/images/about/rosolko.png" alt="Росолько"/>
-                    <figcaption> Леонид Росолько<p> (ПК и ноутбуки)</p></figcaption>
-                </figure>
-                <figure>
-                    <img src="../assets/images/about/lukashin.png" alt="Лукашин"/>
-                    <figcaption> Георгий Лукашин<p> (ПК и ноутбуки)</p></figcaption>
-                </figure>
+                    <figure>
+                        <img src="../assets/images/about/andrey2.png" alt="Директор"/>
+                        <figcaption> Андрей Куваев<p> (Директор)</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="../assets/images/about/rosolko.png" alt="Росолько"/>
+                        <figcaption> Леонид Росолько<p> (ПК и ноутбуки)</p></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="../assets/images/about/lukashin.png" alt="Лукашин"/>
+                        <figcaption> Георгий Лукашин<p> (ПК и ноутбуки)</p></figcaption>
+                    </figure>
                 </div>
                 <div class="workers-second-row">
-                <figure>
-                    <img src="../assets/images/about/ahmetov.png" alt="Ахметов"/>
-                    <figcaption> Амир Ахметов <p> (Apple)</p></figcaption>
-                </figure>
-                <figure>
-                    <img src="../assets/images/about/larin.png" alt="Ларин"/>
-                    <figcaption> Евгений Ларин<p> (Apple)</p></figcaption>
-                </figure>
-                <figure>
-                    <img src="../assets/images/about/boruhin.png" alt="Борухиин"/>
-                    <figcaption> Артур Борухин<p> (Модернизация)</p></figcaption>
-                </figure>
+                    <figure>
+                        <img src="../assets/images/about/ahmetov.png" alt="Ахметов"/>
+                        <figcaption> Амир Ахметов <p> (Apple)</p></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="../assets/images/about/larin.png" alt="Ларин"/>
+                        <figcaption> Евгений Ларин<p> (Apple)</p></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="../assets/images/about/boruhin.png" alt="Борухиин"/>
+                        <figcaption> Артур Борухин<p> (Модернизация)</p></figcaption>
+                    </figure>
                 </div>
             </div>
 
             <div class="schedule">
                 <img src="../assets/images/about/shedule.png" alt="Режим работы">
                 <div>
-                    <p> Работаем в выходные!</p>
+                    <h2> Работаем в выходные!</h2>
                     <p> Пн-Пт: 8<span>00</span> – 21<span>00</span></p>
                     <p> Сб-Вс: 10<span>00</span> – 18<span>00</span></p>
                 </div>
             </div>
 
+            <div class="feedback">
+                <h2>Отзывы наших клиентов:</h2>
+                <blockquote>
+                    <p>Быстро, качественно и на совесть . человек сделал вовремя и все как обещал и даже больше - кроме замены корпуса , вычистил ноут, сделал грубо говоря ТО машинке :)</p>
+                    <footer>— <cite>Вадим</cite> на заказ замена корпуса Lenovo s510p</footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Работа выполнена качественно и в срок. Рекомендую!</p>
+                    <footer>— <cite>Александр</cite> на заказ Чистка 2-х ноутбуков</footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Второй раз доверяю человеку свой компьютер. Второй раз остаюсь довольна выполненной работой. Большое спасибо!</p>
+                    <footer>— <cite>Катерина</cite> на заказ Разобраться с клавиатурой</footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Заявленные услуги выполнены качественно (ноутбук вернулся из ремонта без малейшего намека на косметические дефекты), диагностика в течении одного дня - бесплатно, дальше по телефону оговорены все нюансы ремонта (стоимость, сроки). Все выполнено строго в оговоренный срок без проволочек и а оговоренную сумму без каких либо непредвиденных обязательств. В дальнейшем в случае необходимости так же буду обращаться к этому исполнителю.
+                        <br>P.S. Мелочь а приятно. Ноутбук из ремонта забирала жена, случайно дала лишнею купюру, вообщем девушка "приемщик" все пересчитала и указала на лишние деньги. Вообщем лично от жены дополнительный плюс в карму за порядочность Вам и Вашим сотрудникам</p>
+                    <footer>— <cite>Антон</cite> на заказ Ремонт ноутбука ASUS K551LN-XX010D
+                    </footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Мастер приехал оперативно. На месте установил причину неисправности, подробно рассказал о вариантах ремонта и назвал примерную стоимость. Так как отремонтировать на месте не было возможности забрал компьютер с собой. В итоге всю сделали в короткие сроки. Сервисом и ценой полностью доволен. Рекомендую всем обращаться за компьютерной помощью к данному исполнителю.</p>
+                    <footer>— <cite>ИП Тиханович Дмитрий Михайлович</cite> на заказ Ремонт компьютера</footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Мастер внимательный, аккуратный, сроки и сумма заказа соответсвуют. Приятный пластиковая вип-карта на 13% скидки, рекомендую</p>
+                    <footer>— <cite>Антон</cite> на заказ Установить Виндовс</footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Спасибо за оперативность, буду обращаться ещё. Мастер очень вежливый.</p>
+                    <footer>— <cite>Олег</cite> на заказ Asus X551MA нужна замена процессора.</footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Быстро повели диагностику, держали в курсе во время всего процесса ремонта. Очень приятное обслуживание.</p>
+                    <footer>— <cite>Ольга</cite> на заказ Не заряжается аккумулятор ноутбука</footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Работа выполнена на достойном уровне, и достаточно быстро. Никаких претензий по качеству нет. Была заменена матрица, очищены внутренности ноутбука, восстановлены столбики внутри. Ноутбук получил вторую жизнь. Спасибо исполнителям.</p>
+                    <footer>— <cite>Михаил</cite> на заказ Замена матрицы ноутбука Lenovo G580
+                    </footer>
+                </blockquote>
+
+                <blockquote>
+                    <p>Рассказываю - у нас сломался компьютер, не загружалась система и на экране светились полоски, мы разместили заказ на услуги на онлайнере и в течение суток выбрали специалиста по рейтингу и отзывам. Он приехал на следующий день к нам, установил причину поломки (видеокарта), далее установил новую видеокарту, установил систему и установил все нужные программы. И всё это - за 1 час!!! Мы довольны!!! Спасибо большое!!! 😊</p>
+                    <footer>— <cite>Мария</cite> на заказ Диагностика компьютер и ремонт</footer>
+                </blockquote>
+            </div>
         </main>
         <footer class="footer">
             <div class="contacts">
