feat: add contacts on About page, add folding for feedback part

--- a/pages/about.html
+++ b/pages/about.html
@@ -87,8 +87,34 @@
                 </div>
             </div>
 
+            <div class="contacts-about ">
+                <h2>Наши контакты:</h2>
+                 <div>
+                    <a href="tel:+375291135677" title="Позвоните" class="tel">
+                        <img src="../assets/images/about/phone_blue.png" alt="Телефон">
+                    </a>
+                    <span>8(029)113-56-77</span>
+                </div>
+                <div>
+                    <a href="mailto:computer_doctor@tutanota.com" title="Отправьте письмо" class="e-mail">
+                        <img src="../assets/images/about/mail_blue.png" alt="Телефон">
+                    </a>
+                    <span>computer_doctor@tutanota.com</span>
+                </div>
+                <div>
+                    <a href="https://goo.gl/maps/NqF6KK5yPjTX7cQE8" title="Приезжайте" target="_blank" class="address">
+                        <img src="../assets/images/about/address_blue.png" alt="Телефон">
+                    </a>
+                    <span>г.Минск. Проспект Машерова, 134, офис 32</span>
+                </div>
+            </div>
+
             <div class="feedback">
-                <h2>Отзывы наших клиентов:</h2>
+                <input type="checkbox" id="blockquote-open" class="hide"/>
+                <label for="blockquote-open">
+                <h2> <span class="pointer"> &#5125; </span> <span> Прочитать отзывы наших клиентов </span> <span class="pointer"> &#5130; </span> </h2>
+                </label>
+                <div class="blockquote">
                 <blockquote>
                     <p>Быстро, качественно и на совесть . человек сделал вовремя и все как обещал и даже больше - кроме замены корпуса , вычистил ноут, сделал грубо говоря ТО машинке :)</p>
                     <footer>— <cite>Вадим</cite> на заказ замена корпуса Lenovo s510p</footer>
@@ -141,6 +167,7 @@
                     <p>Рассказываю - у нас сломался компьютер, не загружалась система и на экране светились полоски, мы разместили заказ на услуги на онлайнере и в течение суток выбрали специалиста по рейтингу и отзывам. Он приехал на следующий день к нам, установил причину поломки (видеокарта), далее установил новую видеокарту, установил систему и установил все нужные программы. И всё это - за 1 час!!! Мы довольны!!! Спасибо большое!!! 😊</p>
                     <footer>— <cite>Мария</cite> на заказ Диагностика компьютер и ремонт</footer>
                 </blockquote>
+                </div>
             </div>
         </main>
         <footer class="footer">
