feat: add style and form on page Order

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="nav-item"><a href="./index.html"><span> Главная </span></a></li>
                 <li class="nav-item"><a href="./pages/about.html"><span> О нас </span></a></li>
                 <li class="nav-item"><a href="#"><span> Услуги </span></a></li>
-                <li class="nav-item"><a href="#"><span> Заказать </span></a></li>
+                <li class="nav-item"><a href="./pages/order.html"><span> Заказать </span></a></li>
             </ul>
         </div>
 
