--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="./index.html"><span> Главная </span></a></li>
                 <li class="nav-item"><a href="./pages/about.html"><span> О нас </span></a></li>
-                <li class="nav-item"><a href="#"><span> Услуги </span></a></li>
+                <li class="nav-item"><a href="./pages/services.html"><span> Услуги </span></a></li>
                 <li class="nav-item"><a href="./pages/order.html"><span> Заказать </span></a></li>
             </ul>
         </div>
@@ -88,11 +88,6 @@
             </div>
             </div>
             <div class="vip"> <p>При сумме оплаты <u>от 100 рублей</u> услуги курьера <span> бесплатно!</span></p></div>
-
-            <!--<h2> Работаем в выходные!</h2>-->
-            <!--<h2> Режим работы:</h2>-->
-            <!--<p> Понедельник-пятница : 8.00 – 21.00,</p>-->
-            <!--<p> Суббота-воскресенье: 10.00-18.00.</p>-->
 
         </main>
         <footer class="footer">
