--- a/pages/services.html
+++ b/pages/services.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Отправить заявку</title>
+    <title>Наши услуги</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-order.css">
+    <link rel="stylesheet" href="../css/style-services.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="icon" href="../favicon.png">
@@ -36,41 +36,14 @@
     </div>
 
     <div class="central">
-        <main class="main main-order">
+        <main class="main main-services">
 
-            <form class="contact-form" action="#" method="post" name="contact_form">
-                <ul>
-                    <li>
-                        <h2>Отправьте нам свою заявку!</h2>
-                        <span class="required_notification">* поля, обязательные для ввода</span>
-                    </li>
-                    <li>
-                        <label for="name">Имя Фамилия:</label>
-                        <input type="text" id="name" placeholder="Иванов Игорь Николаевич" required minlength="3"/>
-                    </li>
-                    <li>
-                        <label for="email">Email:</label>
-                        <input class="email" type="email" name="email" id="email" placeholder="ivanov@tut.by" pattern="[A-Za-z0-9_]{1,}@[A-Za-z]{1,}.[A-Za-z]{2,}"/>
-                        <span class="form-hint">Верный формат: "name@something.com"</span>
-                    </li>
-                    <li>
-                        <label for="phone">Телефон:</label>
-                        <input type="text" name="website"  id="phone" placeholder="80291123443" required pattern="80(29|44)[0-9]{7}"/>
-                        <span class="form-hint">Верный формат: "80291123443"</span>
-                    </li>
-                    <li>
-                        <label for="title">Тема:</label>
-                        <input type="text" id="title" placeholder="Не включается ноутбук" required />
-                    </li>
-                    <li>
-                        <label for="message">Описание проблемы:</label>
-                        <textarea name="message" id="message" cols="40" rows="6" placeholder="..." required ></textarea>
-                    </li>
-                    <li>
-                        <button class="submit" type="submit">Отправить</button>
-                    </li>
-                </ul>
-            </form>
+<div class="test">
+    <a href="http://localhost:3000/">Посмотреть список услуг</a>
+    <a href="http://localhost:3000/clients">Посмотреть список клиентов</a>
+    <a href="http://localhost:3000/masters">Посмотреть список мастеров</a>
+    <a href="http://localhost:3000/orders">Посмотреть список заказов</a>
+</div>
 
 
         </main>
@@ -97,5 +70,6 @@
         </footer>
     </div>
 </div>
+<script src="../app.js"></script>
 </body>
 </html>
